--- a/static/css/main.less
+++ b/static/css/main.less
@@ -1,6 +1,38 @@
 @import "bootstrap/less/bootstrap.less";
 @import "bootstrap/less/responsive.less";
 
+@media (min-width: 768px) {
+    body { 
+        background: url(../img/background.jpg) no-repeat center center fixed; 
+        -webkit-background-size: cover;
+        -moz-background-size: cover;
+        -o-background-size: cover;
+        background-size: cover;
+    }
+}
+
+
+body {
+    padding-top: 60px;
+    padding-bottom: 40px;
+}
+.sidebar-nav {
+    padding: 9px 0;
+}
+
+.well {
+    padding-left: 25px;
+}
+
+.info-wrapper {
+    margin-top: 20px;
+    padding: 20px;
+}
+
+.map-wrapper {
+    padding: 20px;
+}
+
 #map {
     height: 400px;
     
