social buttons (twitter, fb, g+)

--- a/static/css/main.less
+++ b/static/css/main.less
@@ -55,3 +55,12 @@ body {
 #confirmModal {
     display: none;
 }
+
+.share-buttons {
+    float: left;
+}
+
+.share-button {
+    margin: 7px;
+    display: inline-block;
+}
