--- a/static/css/main.less
+++ b/static/css/main.less
@@ -21,7 +21,7 @@ body {
 }
 
 .well {
-    padding-left: 25px;
+    padding: 0 15px;
 }
 
 .info-wrapper {
@@ -64,3 +64,44 @@ body {
     margin: 7px;
     display: inline-block;
 }
+
+.fullscreen_post_bg {
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    background-size: cover;
+    background-position: 50% 50%;
+    z-index: -1;
+}
+
+#disqus_thread {
+    
+}
+
+#items dt {
+    padding: 10px 0 0;
+}
+#items dt a {
+    text-decoration: none;
+    color: #333;
+    font-weight: normal;
+}
+#items dt a:hover {
+    color: #999;
+}
+
+#items dt span {
+    color: #0088CC;
+}
+
+#items dd {
+    border-bottom: 1px solid #ccc;
+    padding: 5px 0 10px 0;
+    margin: 0;
+    font-size: 11px;
+}
+
+
+
