changed menu position fixed to be for 900px some netbooks fall into 768px and their vertical space is limited

--- a/static/css/main.less
+++ b/static/css/main.less
@@ -12,7 +12,9 @@
     .container-fluid .rfloat {
         float: right;
     }
+}
 
+@media (min-width: 900px) {
     .itemList {
         position: fixed;
     }
